--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="/react-app/image/svg+xml" href="/react-app/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Charles M. Raines</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/react-app/src/main.jsx"></script>
+  </body>
+</html>
