--- a/react-app/index.html
+++ b/react-app/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="/react-app/image/svg+xml" href="/react-app/vite.svg" />
+    <link rel="icon" type="/image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charles M. Raines</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/react-app/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
