--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Charles M. Raines</h2>
-            <p>I am a  <span class="typed" data-typed-items="PhD Student, Robotics Developer, Researcher, Programmer">Roboitcs Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-            <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+            <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #1f2937">Charles M. Raines</h2>
+            <p>I am a  <span class="typed" data-typed-items="PhD Student, Robotics Developer, Researcher, Programmer">Robotics Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <div class="button-row">
+              <a href="assets/files/cmr_resume.pdf" class="resume-button" download><i class="fa fa-download" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"></i>Resume<div class="bi bi-download ms-1"></div></a>
+              <div class="divider"></div>
+              <a href="https://www.linkedin.com/in/charles-m-raines/"><i class="bi bi-linkedin" style="font-size: 2rem; color: #0a66c2;"></i></a>
             </div>
           </div>
         </div>
