fix for mobile font

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #1f2937">Charles M. Raines</h2>
+            <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; color: #1f2937">Charles M. Raines</h2>
             <p>I am a  <span class="typed" data-typed-items="PhD Student, Robotics Developer, Researcher, Programmer">Robotics Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="button-row d-flex flex-row flex-wrap gap-3 mt-3">
               <a href="assets/files/cmr_resume.pdf" class="resume-button" download><i class="fa fa-download" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"></i>Resume<div class="bi bi-download ms-1"></div></a>
