--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Author of Favicon: https://www.flaticon.com/authors/tanah-basah-->
+  <link href="assets/img/space-robot.png" rel="icon">
+  <link href="assets/img/space-robot.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
